Ignore dynamic radar image

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ www/google0f12d965ebc80330.html
 home-assistant_v2.db-wal
 home-assistant_v2.db-shm
 www/zigbee2mqtt_networkmap/source.js
+www/images/sydneyradar.gif
