--- a/recorder.yaml
+++ b/recorder.yaml
@@ -56,3 +56,76 @@ exclude:
     - sensor.google_wifi_uptime
     - sensor.google_wifi_new_version
     - sensor.google_wifi_current_version
+    - sensor.bom_current_text
+    - sensor.bom_current_text    
+    - sensor.bom_forecast_0  
+    - sensor.bom_forecast_1
+    - sensor.bom_forecast_2  
+    - sensor.bom_forecast_3
+    - sensor.bom_forecast_4
+    - sensor.bom_forecast_5
+    - sensor.bom_forecast_6
+    - sensor.bom_gosford_air_temp_c
+    - sensor.bom_gosford_chance_of_rain_0
+    - sensor.bom_gosford_chance_of_rain_1
+    - sensor.bom_gosford_chance_of_rain_2
+    - sensor.bom_gosford_chance_of_rain_3
+    - sensor.bom_gosford_chance_of_rain_4
+    - sensor.bom_gosford_chance_of_rain_5
+    - sensor.bom_gosford_chance_of_rain_6
+    - sensor.bom_gosford_delta_temp_c
+    - sensor.bom_gosford_detailed_summary_0
+    - sensor.bom_gosford_detailed_summary_1
+    - sensor.bom_gosford_detailed_summary_2
+    - sensor.bom_gosford_detailed_summary_3
+    - sensor.bom_gosford_detailed_summary_4
+    - sensor.bom_gosford_detailed_summary_5
+    - sensor.bom_gosford_detailed_summary_6
+    - sensor.bom_gosford_dew_point_c
+    - sensor.bom_gosford_dew_point_c
+    - sensor.bom_gosford_feels_like_c
+    - sensor.bom_gosford_icon_0
+    - sensor.bom_gosford_max_temp_c_0
+    - sensor.bom_gosford_min_temp_c_0
+    - sensor.bom_gosford_possible_rainfall_0
+    - sensor.bom_gosford_summary_0
+    - sensor.bom_gosford_icon_1
+    - sensor.bom_gosford_max_temp_c_1
+    - sensor.bom_gosford_min_temp_c_1
+    - sensor.bom_gosford_possible_rainfall_1
+    - sensor.bom_gosford_summary_1
+    - sensor.bom_gosford_icon_2
+    - sensor.bom_gosford_max_temp_c_2
+    - sensor.bom_gosford_min_temp_c_2
+    - sensor.bom_gosford_possible_rainfall_2
+    - sensor.bom_gosford_summary_2
+    - sensor.bom_gosford_icon_3
+    - sensor.bom_gosford_max_temp_c_3
+    - sensor.bom_gosford_min_temp_c_3
+    - sensor.bom_gosford_possible_rainfall_3
+    - sensor.bom_gosford_summary_3
+    - sensor.bom_gosford_icon_4
+    - sensor.bom_gosford_max_temp_c_4
+    - sensor.bom_gosford_min_temp_c_4
+    - sensor.bom_gosford_possible_rainfall_4
+    - sensor.bom_gosford_summary_4
+    - sensor.bom_gosford_icon_5
+    - sensor.bom_gosford_max_temp_c_5
+    - sensor.bom_gosford_min_temp_c_5
+    - sensor.bom_gosford_possible_rainfall_5
+    - sensor.bom_gosford_summary_5
+    - sensor.bom_gosford_icon_6
+    - sensor.bom_gosford_max_temp_c_6
+    - sensor.bom_gosford_min_temp_c_6
+    - sensor.bom_gosford_possible_rainfall_6
+    - sensor.bom_gosford_summary_6
+    - sensor.bom_gosford_relative_humidity
+    - sensor.bom_gosford_weather
+    - sensor.bom_gosford_wind_direction
+    - sensor.bom_gosford_wind_gust_kmh
+    - sensor.bom_gosford_wind_gust_kt
+    - sensor.bom_gosford_wind_speed_kmh
+    - sensor.bom_gosford_wind_speed_kt
+    - sensor.bom_today_max
+    - sensor.bom_today_min
+    - sensor.today_temp_bom_mean
