--- a/esphome/bedroomesp.yaml
+++ b/esphome/bedroomesp.yaml
@@ -21,3 +21,17 @@ light:
     num_leds: 1
     rgb_order: RGB
     name: "Bedroom LED"
+
+i2c:
+
+# Example configuration entry
+sensor:
+  - platform: bmp280
+    temperature:
+      name: "Bedroom Temperature"
+      oversampling: 16x
+    pressure:
+      name: "Bedroom Pressure"
+      unit_of_measurement: mbar
+    address: 0x76
+    update_interval: 60s
