Stop using onvif for camera and remove old camera

--- a/camera.yaml
+++ b/camera.yaml
@@ -5,24 +5,14 @@
   name: minicam
   stream_source: http://192.168.86.105/videostream.asf?user=admin&pwd=&resolution=32
   still_image_url: http://192.168.86.105/media?action=snapshot&user=admin&pwd=
-- platform: mjpeg
-  name: backyard
-  mjpeg_url: http://192.168.86.41/media?action=stream&user=admin&pwd=
-  still_image_url: http://192.168.86.41/snapshot.cgi?user=admin&pwd=
 - platform: generic
   stream_source: rtsp://192.168.86.56:554/
   still_image_url: http://192.168.86.56:554/snapshot
-  name: camera2
+  name: livingroom
 - platform: mjpeg
   name: carport
   still_image_url: http://192.168.86.61/image.jpg
   mjpeg_url: http://192.168.86.61/MJPEG.CGI
-- platform: onvif
-  name: backroom_ptz
-  host: 192.168.86.74
-  username: admin
-  password: admin
-  port: 10080
 - platform: mjpeg
   name: backroom
   still_image_url: http://192.168.86.74/snapshot.cgi?loginuse=admin&loginpas=admin
