--- a/switches/command_line.yaml
+++ b/switches/command_line.yaml
@@ -1,21 +1,5 @@
 - platform: command_line
   switches:
-    backyard_up:
-      value_template: "{{ True }}"
-      command_on: '/config/ptz_script.sh 1'
-      command_off: '/config/ptz_script.sh 1'
-    backyard_down:
-      value_template: "{{ True }}"
-      command_on: '/config/ptz_script.sh 2'
-      command_off: '/config/ptz_script.sh 2'
-    backyard_right:
-      value_template: "{{ True }}"
-      command_on: '/config/ptz_script.sh 3'
-      command_off: '/config/ptz_script.sh 3'
-    backyard_left:
-      value_template: "{{ True }}"
-      command_on: '/config/ptz_script.sh 4'
-      command_off: '/config/ptz_script.sh 4'
     backroom_ptz_away:
       value_template: "{{ True }}"
       command_on: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080"'
@@ -24,3 +8,19 @@
       value_template: "{{ True }}"
       command_on: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
       command_off: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
+    backroom_ptz_left:
+      value_template: "{{ True }}"
+      command_on: '/config/ptz_script.sh left'
+      command_off: '/config/ptz_script.sh left'
+    backroom_ptz_right:
+      value_template: "{{ True }}"
+      command_on: '/config/ptz_script.sh right'
+      command_off: '/config/ptz_script.sh right'
+    backroom_ptz_up:
+      value_template: "{{ True }}"
+      command_on: '/config/ptz_script.sh up'
+      command_off: '/config/ptz_script.sh up'
+    backroom_ptz_down:
+      value_template: "{{ True }}"
+      command_on: '/config/ptz_script.sh down'
+      command_off: '/config/ptz_script.sh down'
