--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,8 +30,13 @@ logger:
 
 http:
   base_url: https://home.adebenham.com:8123
-  ssl_certificate: /ssl/fullchain.pem
-  ssl_key: /ssl/privkey.pem
+  server_port: 8122
+  trusted_proxies:
+    - 192.168.86.2
+    - 127.0.0.1
+  use_x_forwarded_for: true
+#  ssl_certificate: /ssl/fullchain.pem
+#  ssl_key: /ssl/privkey.pem
 
 updater:
   include_used_components: true
