Ignore the generated network map

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ home-assistant_v2.db-wal
 home-assistant_v2.db-shm
 www/zigbee2mqtt_networkmap/source.js
 www/images/sydneyradar.gif
+www/community/zigbee2mqtt_networkmap/source.js
