--- a/automation/backdoor.yaml
+++ b/automation/backdoor.yaml
@@ -21,3 +21,7 @@
     - service: service.hangout_notify
       data:
         message: "Back doors left open"
+    - service: tts.google_say
+      entity_id: media_player.whole_house
+      data:
+        message: "Heads up - Someone left the back doors open"
