Add motioneye to sidebar

--- a/panel_iframe.yaml
+++ b/panel_iframe.yaml
@@ -10,6 +10,10 @@ sickchill:
   title: 'SickChill'
   url: 'https://home.adebenham.com/int/sickchill/'
   icon: mdi:library-movie
+motion:
+  title: 'Motion'
+  url: 'https://home.adebenham.com/int/motion/'
+  icon: mdi:video
 pihole:
   title: 'Pihole'
   url: 'https://home.adebenham.com/int/pihole/'
