Don't record geo_location domain

--- a/recorder.yaml
+++ b/recorder.yaml
@@ -11,6 +11,7 @@ exclude:
     - switch
     - zignee2mqtt_networkmap
     - script
+    - geo_location
   entities:
     - sensor.date
     - sensor.time
