--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,10 +10,12 @@ homeassistant:
 frontend:
   themes: !include_dir_merge_named themes/
 
-config:
 discovery:
+  ignore:
+    - igd
+config:
 conversation:
-#logbook:
+logbook:
 history:
 sun:
 system_health:
