Move to new url

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,7 +31,7 @@ logger:
   default: info
 
 http:
-  base_url: https://home.adebenham.com:8123
+  base_url: https://ha.adebenham.com
   server_port: 8122
   trusted_proxies:
     - 192.168.86.2
