Lux not working currently

--- a/automation/backdoor.yaml
+++ b/automation/backdoor.yaml
@@ -30,9 +30,14 @@
       entity_id: binary_sensor.backdoor_sensor_contact
       to: 'Open'
   condition:
-    condition: numeric_state
-    entity_id: sensor.entry_motion_illuminance
-    below: 11000
+    condition: and
+    conditions:
+      - condition: sun
+        after: sunset
+        after_offset: "-01:00:00"
+      - condition: sun
+        before: sunrise
+        before_offset: "-01:00:00"
   action:
     service: light.turn_on
     data:
