--- a/scene.yaml
+++ b/scene.yaml
@@ -15,6 +15,8 @@
       state: true
       brightness_pct: 100
       effect: Slow Random Effect
+    switch.livingroom_light:
+      state: true
 - name: Movies
   entities:
     light.livingroom_light_group:
@@ -28,6 +30,8 @@
     light.tv_backlight_2:
       state: true
       effect: Slow Random Effect
+    switch.livingroom_light:
+      state: true
 - name: Night
   entities:
     light.kitchen_light_group:
@@ -42,6 +46,8 @@
       state: true
       brightness_pct: 100
       effect: Random Twinkle
+    switch.livingroom_light:
+      state: true
 - name: Turn off
   entities:
     light.kitchen_light_group: false
@@ -50,6 +56,8 @@
       state: true
       brightness_pct: 100
       effect: Random Twinkle
+    switch.livingroom_light:
+      state: false
 - name: All off
   entities:
     light.backroom_light_group: false
