Make backyard switch also trigger backroom

--- a/automation/backdoor.yaml
+++ b/automation/backdoor.yaml
@@ -54,3 +54,24 @@
     service: light.turn_off
     data:
       entity_id:  light.sensor_light
+- alias: Backdoor switch on
+  trigger:
+    - platform: state
+      entity_id: light.backyard_light
+      to: 'on'
+  condition: []
+  action:
+    service: light.turn_on
+    data:
+      entity_id: light.backroom_light_group
+      brightness_pct: 100
+- alias: Backdoor switch off
+  trigger:
+    - platform: state
+      entity_id: light.backyard_light
+      to: 'off'
+  condition: []
+  action:
+    service: light.turn_off
+    data:
+      entity_id: light.backroom_light_group
