--- a/automation/kitchen.yaml
+++ b/automation/kitchen.yaml
@@ -2,6 +2,8 @@
   trigger:
   - entity_id: sensor.hueswitch_1_action
     platform: state
+  - entity_id: sensor.kitchen_dimmer_action
+    platform: state
   condition:
     - condition: template
       value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'off-press'] }}"
@@ -18,7 +20,7 @@
       color_temp: 333
 - alias: Dimmer - Kitchen blue
   trigger:
-  - entity_id: sensor.hueswitch_1_action
+  - entity_id: sensor.kitchen_dimmer_action
     platform: state
     to: 'down-press'
   condition: []
