--- a/automation/backdoor.yaml
+++ b/automation/backdoor.yaml
@@ -61,10 +61,14 @@
       to: 'on'
   condition: []
   action:
-    service: light.turn_on
-    data:
-      entity_id: light.backroom_light_group
-      brightness_pct: 100
+    - service: light.turn_on
+      data:
+        entity_id: light.backroom_light_group
+        brightness_pct: 100
+    - service: light.turn_on
+      data:
+        entity_id: light.craftroom_light
+        brightness_pct: 100
 - alias: Backdoor switch off
   trigger:
     - platform: state
@@ -72,6 +76,9 @@
       to: 'off'
   condition: []
   action:
-    service: light.turn_off
-    data:
-      entity_id: light.backroom_light_group
+    - service: light.turn_off
+      data:
+        entity_id: light.backroom_light_group
+    - service: light.turn_off
+      data:
+        entity_id: light.craftroom_light
