--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -139,6 +139,14 @@ views:
         type: custom:button-card
       - color: rgb(5, 147, 255)
         color-type: card
+        entity: light.backyard_light
+        hold_action:
+          action: more-info
+          entity: light.backyard_light
+        name: Backyard
+        type: custom:button-card
+      - color: rgb(5, 147, 255)
+        color-type: card
         entity: switch.front_lights
         hold_action:
           action: more-info
