--- a/groups.yaml
+++ b/groups.yaml
@@ -17,6 +17,7 @@ livingroom_lights:
     - light.livingroom_main_a_light
     - light.livingroom_main_b_light
     - light.livingroom_side
+    - light.livingroom_a
 bedroom_lights:
   name: Bedroom
   icon: mdi:bed-empty
