--- a/automation/backroom.yaml
+++ b/automation/backroom.yaml
@@ -1,18 +1,31 @@
-- alias: Dimmer - Backroom
+- alias: Backroom Switch1
   trigger:
-  - entity_id: sensor.backroom_dimmer_action
+  - entity_id: binary_sensor.backroom_switch1
     platform: state
-  condition:
-    - condition: template
-      value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.backroom_light_group
     service: light.turn_on
     data_template:
       transition: 1
-      brightness_pct: >
-        {% if trigger.to_state.state == 'on-press' %} 100
-        {% elif trigger.to_state.state == 'up-press' %} 50
-        {% elif trigger.to_state.state == 'down-press' %} 1
-        {% elif trigger.to_state.state == 'off-press' %} 0
-        {% endif %}
+      brightness_pct: 100
+- alias: Backroom Switch2
+  trigger:
+  - entity_id: binary_sensor.backroom_switch2
+    platform: state
+  action:
+  - entity_id: light.backroom_light_group
+    service: light.turn_on
+    data_template:
+      transition: 1
+      brightness_pct: 10
+  - entity_id: switch.backroom_relay_1
+    service: switch.turn_on
+- alias: Backroom Switch3
+  trigger:
+  - entity_id: binary_sensor.backroom_switch3
+    platform: state
+  action:
+  - entity_id: light.backroom_light_group
+    service: light.turn_off
+  - entity_id: switch.backroom_relay_1
+    service: switch.turn_off
