--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -50,3 +50,38 @@
         {% elif trigger.to_state.state == 'down-press' %} 1
         {% elif trigger.to_state.state == 'off-press' %} 0
         {% endif %}
+  - entity_id: switch.bedroom_relay_1
+    service: switch.turn_on
+- alias: Main Bedroom - Switch1
+  trigger:
+  - entity_id: binary_sensor.bedroom_switch1
+    platform: state
+  action:
+  - entity_id: light.bedroom_light_group
+    service: light.turn_on
+    data:
+      transition: 1
+      brightness_pct: 100
+  - entity_id: switch.bedroom_relay_1
+    service: switch.turn_on
+- alias: Main Bedroom - Switch2
+  trigger:
+  - entity_id: binary_sensor.bedroom_switch2
+    platform: state
+  action:
+  - entity_id: light.bedroom_light_group
+    service: light.turn_on
+    data:
+      transition: 1
+      brightness_pct: 50
+  - entity_id: switch.bedroom_relay_1
+    service: switch.turn_on
+- alias: Main Bedroom - Switch3
+  trigger:
+  - entity_id: binary_sensor.bedroom_switch3
+    platform: state
+  action:
+  - entity_id: light.bedroom_light_group
+    service: light.turn_off
+    data:
+      transition: 1
