--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -31,6 +31,7 @@
     data:
       entity_id: light.bedroom_light_group
       brightness_pct: 50
+      white_value: 125
       transition: 300
 - alias: Dimmer - Main Bedroom
   trigger:
@@ -50,36 +51,49 @@
         {% elif trigger.to_state.state == 'down-press' %} 1
         {% elif trigger.to_state.state == 'off-press' %} 0
         {% endif %}
+      white_value: >
+        {% if trigger.to_state.state == 'on-press' %} 255
+        {% elif trigger.to_state.state == 'up-press' %} 125
+        {% elif trigger.to_state.state == 'down-press' %} 10
+        {% elif trigger.to_state.state == 'off-press' %} 0
+        {% endif %}
   - entity_id: switch.bedroom_relay_1
     service: switch.turn_on
 - alias: Main Bedroom - Switch1
   trigger:
   - entity_id: binary_sensor.bedroom_switch1
     platform: state
+    to: 'on'
   action:
   - entity_id: light.bedroom_light_group
     service: light.turn_on
     data:
       transition: 1
       brightness_pct: 100
+      white_value: 255
+      color_temp: 370
   - entity_id: switch.bedroom_relay_1
     service: switch.turn_on
 - alias: Main Bedroom - Switch2
   trigger:
   - entity_id: binary_sensor.bedroom_switch2
     platform: state
+    to: 'on'
   action:
   - entity_id: light.bedroom_light_group
     service: light.turn_on
     data:
       transition: 1
       brightness_pct: 50
+      color_temp: 370
+      white_value: 125
   - entity_id: switch.bedroom_relay_1
     service: switch.turn_on
 - alias: Main Bedroom - Switch3
   trigger:
   - entity_id: binary_sensor.bedroom_switch3
     platform: state
+    to: 'on'
   action:
   - entity_id: light.bedroom_light_group
     service: light.turn_off
